# backend/routes/api/transactions.js
@@ -1,6 +1,8 @@
-const express = require("express");
+const express = require('express');
 
 const router = express.Router();
-const controllers = require("../../controllers/transactions");
+const controllers = require('../../controllers/transactions');
+
+router.get('/statistics', controllers.getCategories);
 
 module.exports = router;
