# backend/swagger.json
@@ -64,17 +64,33 @@
       "post": {
         "tags": ["Users"],
         "summary": "User authentication",
+        "parameters": [],
         "requestBody": {
           "description": "Authentication object",
-          "required": true
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/LoginRequest" }
+            }
+          }
         },
         "responses": {
           "200": {
             "description": "Successful login",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LoginResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
             "content": {}
           },
-          "401": {
-            "description": "Unauthorized",
+          "403": {
+            "description": "Wrong password / email",
             "content": {}
           }
         }
@@ -84,22 +100,23 @@
       "post": {
         "tags": ["Users"],
         "summary": "User logout",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "token",
-            "required": true,
-            "type": "string",
-            "description": "User token"
-          }
-        ],
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
         "responses": {
-          "200": {
+          "204": {
             "description": "Successful logout",
+            "content": {}
+          },
+          "400": {
+            "description": "No token provided",
             "content": {}
           },
           "401": {
             "description": "Unauthorized",
+            "content": {}
+          },
+          "404": {
+            "description": "Invalid user / invalid session",
             "content": {}
           }
         }
@@ -109,11 +126,11 @@
       "get": {
         "tags": ["Users"],
         "summary": "User information",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
             "in": "query",
             "name": "userId",
-            "required": true,
             "type": "string",
             "description": "User id"
           }
@@ -121,18 +138,47 @@
       }
     },
     "/transactions": {
-      "get": { "tags": ["Transactions"], "summary": "Get transactions" }
-    },
-    "/transactions/new": {
+      "get": {
+        "tags": ["Transactions"],
+        "summary": "Get transactions",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": { "$ref": "#/components/schemas/GetTransactions" }
+              }
+            }
+          }
+        }
+      },
       "post": {
         "tags": ["Transactions"],
         "summary": "Add new transaction",
+        "security": [{ "Bearer": [] }],
+        "parameters": [],
         "requestBody": {
           "description": "New transaction",
-          "required": true
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/AddTransaction" }
+            }
+          }
+        },
+        "responses": {
+          "201": { "description": "Successful operation" },
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/TransactionResponse" }
+            }
+          }
         }
       }
     },
+
     "/transactions/categories": {
       "get": { "tags": ["Transactions"], "summary": "Transaction categories" }
     },
@@ -182,6 +228,68 @@
             "type": "number",
             "description": "User's id",
             "example": "5677sf3dffF6hF5FF"
+          }
+        }
+      },
+      "LoginRequest": {
+        "required": ["email", "password"],
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User's email",
+            "format": "email",
+            "minLength": 6,
+            "maxLength": 50
+          },
+          "password": {
+            "type": "string",
+            "description": "User's password",
+            "example": "blahblah",
+            "minLength": 6,
+            "maxLength": 25
+          }
+        }
+      },
+      "LoginResponse": {
+        "type": "object",
+        "properties": {
+          "accessToken": {
+            "type": "string",
+            "description": "Session access token",
+            "example": "nUHuj6G657889334Gy3cbsh&ZTGknzoO931bT"
+          }
+        }
+      },
+      "GetTransactions": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string",
+              "description": "Transaction id",
+              "example": "5bdd75jd39347d38cugr98i"
+            },
+            "category": {
+              "type": "string",
+              "description": "Category of transactions"
+            },
+            "date": {
+              "type": "string",
+              "description": "Date of transaction",
+              "example": "2022-03-05"
+            },
+            "comment": {
+              "type": "string",
+              "description": "Comment on transaction",
+              "example": "Regular spending"
+            },
+            "income": {
+              "type": "boolean",
+              "description": "Income - false, spending - true"
+            },
+            "userId": { "type": "string", "description": "Owner's id" }
           }
         }
       }
